[package]
name = "bevy_mod_interp"
version = "0.1.0"
edition = "2021"
description = "Bevy plugin for interpolated transformations"
repository = "https://github.com/helvieq499/bevy_mod_interp"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["bevy", "interpolation"]
categories = ["game-development"]

[dependencies]
bevy = "0.10"
lerp = "0.5.0"
